# COCOPLOT

./: .buildinfo  .gitignore  COCOIMAGE.pro  COCONORM.pro  COCOPLOT.pro  COCORGB.pro  COCOSHOW.pro  COCOVIDEO.pro  LICENSE  README.md  cocopy.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: main.yml
IDL/: COCOFILTER.pro  COCOFILTNORM.pro  COCOFILTPLOT.pro  COCOIMAGE.pro  COCONORM.pro  COCOPLOT.pro  COCORGB.pro  COCOSHOW.pro  COCOVIDEO.pro  cocofilter.pro  cocofilter_defaults.pro  cocofiltnorm.pro  cocofiltplot.pro  cocoimage.pro  coconorm.pro  cocoplot.pro  cocorgb.pro  cocoshow.pro  cocovideo.pro
Python/: README.md  __init__ .py  __init__.py
Python/cocopy/: README.md  __init__.py  cocoplot.py
Python/docs/: compile.sh
Python/docs/source/: cocopy.rst  conf.py
_sources/: cocopy.rst.txt  index.rst.txt  modules.rst.txt
