[metadata]
name = COCOPLOTS
version = 1.0.8
author = A.G.M. Pietrow, G.J.M. Vissers, C. Robustini, M.K. Druett
author_email = alex.pietrow@astro.su.se
description = COlor COllapsed PLOTting quick-look and context image software
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mdruett/COCOPLOT/tree/master/Python
project_urls =
    Bug Tracker = https://github.com/mdruett/COCOPLOT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = Python
packages = find: cocopy
python_requires = >=3.7

[options.packages.find]
where = Python
